Fixed starting animation end loc on mobile| Fixed canvas dimentions on mobile | Modified max zoom out distance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,10 +123,3 @@ canvas {
   width: 100vw !important;
   /* border: red 1px solid; */
 }
-
-@media screen and (max-width: 768px) {
-  canvas {
-    height: 30vh !important;
-    width: 90vw !important;
-  }
-}
